# macrotwo

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/earth/: README.md
data/fonts/: README.md
devcontainer/: devcontainer.json  setup.sh
src/: CMakeLists.txt  main.cpp
src/app/: AppStateBus.hpp  Application.hpp  GeoSelectionContext.cpp  GeoSelectionContext.hpp  Secrets.hpp
src/globe/: GMSIComputer.hpp  GlobeLayer.hpp
src/providers/: AlphaVantageProvider.hpp  AxionQuantProvider.hpp  FinnhubProvider.hpp  FredProvider.hpp  GEEProvider.hpp  HttpClient.hpp  IDataProvider.hpp  IMFProvider.hpp  MarketStackProvider.hpp  NASAGIBSProvider.hpp  NewsAggregatorProvider.hpp  OpenMeteoProvider.hpp  PolygonProvider.hpp  ProviderEngine.hpp  TradierProvider.hpp  WHOProvider.hpp  WorldBankProvider.hpp
src/tables/: ArticleRecord.hpp  FeedModule.hpp  GeoScopedFetcher.hpp  IntelligenceTable.hpp  TablesLayer.hpp
src/typography/: FactorModel.hpp  LLMRationaleService.hpp  TopographyLayer.hpp
src/ui_common/: FilterRail.hpp  LocationContextPanel.hpp  StatusBar.hpp  Theme.cpp  Theme.hpp
tests/: CMakeLists.txt  test_factor_model.cpp  test_geo_context.cpp  test_gmsi.cpp  test_providers.cpp  test_section2.cpp
